--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -2,7 +2,7 @@ name: main_workflow
 on:
   push:
     branches:
-      - nodejs_linter_job
+      - nodejs_jest_job
 jobs:
   linter-execution:
     name: linter-execution
@@ -18,3 +18,13 @@ jobs:
           LINTER_RULES_PATH: /
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
           VALIDATE_JAVASCRIPT_ES: true
+  test-execution:
+    name: test-execution
+    runs-on: ubuntu-latest
+    steps:
+      - name: CheckoutCode
+        uses: actions/checkout@v2
+      - name: Run jest tests
+        uses: npm install jest && npm test
+
+      
