--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -26,6 +26,7 @@ jobs:
       - name: CheckoutCode
         uses: actions/checkout@v2
       - name: Run jest tests
-        uses: npm install jest && npm test
+        uses: npm install jest 
+        uses: npm test
 
       
