--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -25,8 +25,9 @@ jobs:
     steps:
       - name: CheckoutCode
         uses: actions/checkout@v2
+      - name: Install jest tests
+        uses: npm install jest
       - name: Run jest tests
-        uses: npm install jest 
         uses: npm test
 
       
