--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -27,7 +27,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Install jest tests
         uses: npm install jest
-      - name: Run jest tests
-        uses: npm test
+              npm test
 
       
