--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -19,7 +19,7 @@ jobs:
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
           VALIDATE_JAVASCRIPT_ES: true
   test-execution:
-    needs: linter-execution
+    # needs: linter-execution
     name: test-execution
     runs-on: ubuntu-latest
     steps:
