--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -32,5 +32,13 @@ jobs:
       - name: Install jest tests
         run: npm install jest
               npm test
-
-      
+  environment_test_execution:
+    name: environment_test_execution
+    runs-on: ubuntu-latest
+    steps:
+      - name: Hello github action
+        uses: adeloyedeji/github-actions-hello@v1.0
+        env: 
+          DESTINATION_PERSON: 2DAW
+        with:
+          who-to-greet: ${{ env.DESTINATION_PERSON }}
