--- a/.github/workflows/react_app_deploy.yml
+++ b/.github/workflows/react_app_deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
-          name: Artifact
+          name: artifact
       - name: Deploy artifacts
         uses: dswistowski/surge-sh-action@v1
         with:
