--- a/.github/actions/telegram_action/package.json
+++ b/.github/actions/telegram_action/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/JavierSolerArtero99/Github_Actions_Workflow_Inicial#readme",
   "dependencies": {
+    "@actions/core": "^1.2.6",
     "node-telegram-bot-api": "^0.51.0"
   }
 }
