--- a/.github/actions/telegram_action/package.json
+++ b/.github/actions/telegram_action/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/JavierSolerArtero99/Github_Actions_Workflow_Inicial#readme",
   "dependencies": {
     "@actions/core": "^1.2.6",
+    "@actions/github": "^4.0.0",
     "node-telegram-bot-api": "^0.51.0"
   }
 }
